@@ -3,7 +3,7 @@
 
 PREFIX  = @ac_prefix@
 CONFIG += @ac_debug@
-INCLUDEPATH = src #@ac_incpath@
+INCLUDEPATH = @ac_incpath@
 LIBS += @ac_libs@
 
 QMAKE_CXXFLAGS += @ac_cflags@
